--- a/CS353_linux kernel/project4_file system/romfs/Makefile
+++ b/CS353_linux kernel/project4_file system/romfs/Makefile
@@ -2,16 +2,18 @@
 # Makefile for the linux RomFS filesystem routines.
 #
 
-obj-m += romfs.o
+obj-$(CONFIG_ROMFS_FS) += romfs.o
 
 romfs-y := storage.o super.o
-
 KDIR := /lib/modules/$(shell uname -r)/build
 EXTRA_FLAGS := -I(PWD)
 PWD := $(shell pwd)
 
+ifneq ($(CONFIG_MMU),y)
+romfs-$(CONFIG_ROMFS_ON_MTD) += mmap-nommu.o
+endif
+
 all:
 	make -C $(KDIR) M=$(PWD) modules
-
 clean:
-	rm *.o *.ko *.mod.c Module.symvers modules.order -f
+	make -C $(KDIR) M=$(PWD) clean
